release the project show (#24)
* create the enum type in DTO

* create the new route

* remove the focus from the specs

* release the project show
